# cloud-fs

./: .codecov.yml  .gitignore  .travis.yml  Cargo.toml  README.md  azure-pipelines.yml  deny.toml  test
.github/workflows/: checks.yml  coverage.yml
ci/: azure-install-rust.yml
cli/: Cargo.toml
cli/src/: commands.rs  main.rs  main.yaml
cloud-fs/: Cargo.toml
cloud-fs/src/: executor.rs  fs.rs  futures.rs  lib.rs  types.rs  utils.rs
cloud-fs/src/backends/: b2.rs  file.rs  mod.rs
cloud-fs/src/types/: error.rs  future.rs  mod.rs  network.rs  objects.rs  path.rs  stream.rs
cloud-fs/tests/: file.rs  shared.rs
cloud-fs/tests/runner/: mod.rs  read.rs  utils.rs  write.rs
file-store/: Cargo.toml
file-store/src/: backends.rs  executor.rs  filestore.rs  lib.rs  types.rs  utils.rs
file-store/src/backends/: b2.rs  file.rs  mod.rs
file-store/src/backends/b2/: client.rs
file-store/src/types/: error.rs  future.rs  mod.rs  network.rs  objects.rs  path.rs  stream.rs
file-store/tests/: b2.rs  file.rs
file-store/tests/mocks/: b2_server.rs  mod.rs
file-store/tests/runner/: mod.rs  read.rs  utils.rs  write.rs
src/: lib.rs
src/schemes/: file.rs
storage-types/: Cargo.toml
storage-types/src/: b2.rs  lib.rs
storage-types/src/b2/: responses.rs
storage-types/src/b2/v2/: requests.rs  responses.rs
