[package]
name = "fs"
version = "0.1.0"
authors = ["Dave Townsend <dtownsend@oxymoronical.com>"]
edition = "2018"

[dependencies]
file-store = { path = "../file-store" }
clap = { version = "~2.33.0", features = ["yaml"] }
yaml-rust = "^0.3.5"
futures-preview = { version = "=0.3.0-alpha.18", features = ["async-await", "nightly"] }
