[package]
name = "cloud-fs"
version = "0.1.0"
authors = ["Dave Townsend <dtownsend@oxymoronical.com>"]
edition = "2018"

[features]
default = ["file", "b2"]
file = ["tokio-fs"]
b2 = ["hyper"]

[dependencies]
tokio = "0.1.21"
bytes = "0.4.12"
tokio-fs = { version = "0.1.6", optional = true }
hyper = { version = "0.12.30", optional = true }

[dev-dependencies]
tempfile = "3.0.8"
