[package]
name = "file-store"
version = "0.1.0"
authors = ["Dave Townsend <dtownsend@oxymoronical.com>"]
edition = "2018"

[features]
default = ["file", "b2"]
file = ["tokio-fs", "tokio-io"]
b2 = ["hyper", "hyper-tls", "base64", "http", "serde", "serde_json", "storage-types", "sha1", "percent-encoding", "old-futures", "tokio-executor"]

[dependencies]
futures-preview = { version = "=0.3.0-alpha.18", features = ["compat", "async-await"] }
bytes = "^0.4.12"
log = "^0.4.8"
storage-types = { path = "../storage-types", optional = true }
tokio-fs = { version = "=0.2.0-alpha.3", optional = true }
tokio-io = { version = "=0.2.0-alpha.3", optional = true }
tokio-executor = { version = "=0.2.0-alpha.3", optional = true }
hyper = { version = "^0.12.33", optional = true }
hyper-tls = { version = "^0.3.2", optional = true }
base64 = { version = "^0.10.1", optional = true }
http = { version = "^0.1.18", optional = true }
serde = { version = "^1.0.98", optional = true }
serde_json = { version = "^1.0.40", optional = true }
sha1 = { version = "^0.6.0", optional = true, features = ["std"] }
percent-encoding = { version = "^2.1.0", optional = true }
old-futures = { package = "futures", version = "0.1.28", optional = true }

[dev-dependencies]
tempfile = "^3.0.8"
uuid = { version = "0.7", features = ["v4"] }
tokio = "=0.2.0-alpha.3"
old-futures = { package = "futures", version = "0.1.28" }
