[package]
name = "file-store"
version = "0.1.0"
authors = ["Dave Townsend <dtownsend@oxymoronical.com>"]
edition = "2018"

[features]
default = ["file", "b2"]
file = ["tokio-fs", "tokio-io", "filetime"]
b2 = ["hyper", "hyper-tls", "base64", "http", "serde", "serde_json", "storage-types", "sha1", "percent-encoding", "tokio-executor"]

[dependencies]
enum_dispatch = { git = "https://github.com/Mossop/enum_dispatch.git", rev="806ce4a0b6762a439dec6b8634d306249907e1fb" }
futures-preview = "=0.3.0-alpha.18"
bytes = "^0.4.12"
log = "^0.4.8"
storage-types = { path = "../storage-types", optional = true }
tokio-fs = { version = "=0.2.0-alpha.4", optional = true }
tokio-io = { version = "=0.2.0-alpha.4", optional = true }
tokio-executor = { version = "=0.2.0-alpha.4", optional = true }
hyper = { version = "=0.13.0-alpha.1", optional = true }
hyper-tls = { version = "=0.4.0-alpha.1", optional = true }
base64 = { version = "^0.10.1", optional = true }
http = { version = "^0.1.18", optional = true }
serde = { version = "^1.0.98", optional = true }
serde_json = { version = "^1.0.40", optional = true }
sha1 = { version = "^0.6.0", optional = true, features = ["std"] }
percent-encoding = { version = "^2.1.0", optional = true }
filetime = { version = "^0.2.7", optional = true }

[dev-dependencies]
tempfile = "^3.0.8"
uuid = { version = "0.7", features = ["v4"] }
tokio = "=0.2.0-alpha.4"
filetime = "^0.2.7"
env_logger = "^0.6.2"
